[build-system]
requires = [
    "setuptools",
    "wheel",
]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "uv_regression"
dynamic = ["version"]

dependencies = [
    "torch==2.3.1",  # compatible only with torchvision~=0.18.1
    "torchvision==0.19.0",
]
